--- a/views/index.edge
+++ b/views/index.edge
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">created by vamshi krishna</span>
+            <h1>FlyBlog</h1>
+            <span class="subheading">My blog is actually all about self-taught Programming Blog</span>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
           <hr>-->
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary btn-sm float-right" href="#">Older Posts &rarr;</a>
         </div>
       </div>
     </div>
