--- a/views/login.edge
+++ b/views/login.edge
@@ -4,7 +4,7 @@
 
 @section('content')
 <!-- Page Header -->
-  <header class="masthead" style="background-image: url('/img/contact-bg.jpg')">
+  <header class="masthead" style="background-image: url('/img/login-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-primary">Login</button>
+                    <button class="btn btn-primary float-right">Login</button>
                 </div>
               </form>
           </div>
