--- a/views/register.edge
+++ b/views/register.edge
@@ -4,7 +4,7 @@
 
 @section('content')
 <!-- Page Header -->
-  <header class="masthead" style="background-image: url('/img/contact-bg.jpg')">
+  <header class="masthead" style="background-image: url('/img/register-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
