--- a/views/index.edge
+++ b/views/index.edge
@@ -10,7 +10,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>FlyBlog</h1>
-            <span class="subheading">My blog is actually all about self-taught Programming Blog</span>
+            <span class="subheading">My blog is actually all about self-taught Programming</span>
           </div>
         </div>
       </div>
