--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>FlyBlog</title>
-
+  <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
