req.params updated req.query in getPosts.js controllers

--- a/views/index.edge
+++ b/views/index.edge
@@ -24,7 +24,7 @@
 
 @each(post in posts)
   <div class="post-preview">
-    <a href= "/post/{{ post._id }}">
+    <a href= "/post/?id={{post._id}}">
       <h2 class="post-title">
         {{ post.title }}
       </h2>
